fix dropdown z-index

--- a/select.css
+++ b/select.css
@@ -9,6 +9,7 @@
 
 .select__dropdown {
 	position: absolute;
+	z-index: 1;
 	list-style: none;
 	margin: 0;
 	padding: 1px;
